// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should click form 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in the form below to sign up to the Foundations portal
  </div>
  <form
    className="sign-up-form form"
    onSubmit={[Function]}
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value=""
    />
    <input
      className="default"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <input
      className="default"
      id="firstName"
      name="firstName"
      onChange={[Function]}
      placeholder="First Name"
      type="text"
      value=""
    />
    <input
      className="default"
      id="lastName"
      name="lastName"
      onChange={[Function]}
      placeholder="Surname"
      type="text"
      value=""
    />
    <input
      className="default"
      id="company"
      name="company"
      onChange={[Function]}
      placeholder="Company"
      type="text"
      value=""
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="signUpButton"
      onClick={[Function]}
      type="submit"
      value="Sign up"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Already have an account?  Click here to sign in
    </p>
  </form>
</Fragment>
`;

exports[`Should click sign in text 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in the form below to sign up to the Foundations portal
  </div>
  <form
    className="sign-up-form form"
    onSubmit={[Function]}
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value=""
    />
    <input
      className="default"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <input
      className="default"
      id="firstName"
      name="firstName"
      onChange={[Function]}
      placeholder="First Name"
      type="text"
      value=""
    />
    <input
      className="default"
      id="lastName"
      name="lastName"
      onChange={[Function]}
      placeholder="Surname"
      type="text"
      value=""
    />
    <input
      className="default"
      id="company"
      name="company"
      onChange={[Function]}
      placeholder="Company"
      type="text"
      value=""
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="signUpButton"
      onClick={[Function]}
      type="submit"
      value="Sign up"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Already have an account?  Click here to sign in
    </p>
  </form>
</Fragment>
`;

exports[`Should complete login 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <p>
    Thank you for signing up; please check your email for a confirmation email.
  </p>
</Fragment>
`;

exports[`Should fail login 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in the form below to sign up to the Foundations portal
  </div>
  <form
    className="sign-up-form form"
    onSubmit={[Function]}
  >
    <input
      className="filled"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value="Hootsuite@buildingim.com"
    />
    <input
      className="filled"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="Password1234!"
    />
    <input
      className="filled"
      id="firstName"
      name="firstName"
      onChange={[Function]}
      placeholder="First Name"
      type="text"
      value="Testy"
    />
    <input
      className="filled"
      id="lastName"
      name="lastName"
      onChange={[Function]}
      placeholder="Surname"
      type="text"
      value="McTesterson"
    />
    <input
      className="filled"
      id="company"
      name="company"
      onChange={[Function]}
      placeholder="Company"
      type="text"
      value="test company"
    />
    <div
      className="error-callout"
    >
      <p>
        failed
      </p>
    </div>
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="signUpButton"
      onClick={[Function]}
      type="submit"
      value="Sign up"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Already have an account?  Click here to sign in
    </p>
  </form>
</Fragment>
`;

exports[`Should render sign in box 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in the form below to sign up to the Foundations portal
  </div>
  <form
    className="sign-up-form form"
    onSubmit={[Function]}
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value=""
    />
    <input
      className="default"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <input
      className="default"
      id="firstName"
      name="firstName"
      onChange={[Function]}
      placeholder="First Name"
      type="text"
      value=""
    />
    <input
      className="default"
      id="lastName"
      name="lastName"
      onChange={[Function]}
      placeholder="Surname"
      type="text"
      value=""
    />
    <input
      className="default"
      id="company"
      name="company"
      onChange={[Function]}
      placeholder="Company"
      type="text"
      value=""
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="signUpButton"
      onClick={[Function]}
      type="submit"
      value="Sign up"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Already have an account?  Click here to sign in
    </p>
  </form>
</Fragment>
`;

exports[`Should render sign in box with webp 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://prind.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Prin-D Technology logo"
        src="/images/logos/prind-tech-logo.webp"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Fill in the form below to sign up to the Foundations portal
  </div>
  <form
    className="sign-up-form form"
    onSubmit={[Function]}
  >
    <input
      className="default"
      id="email"
      name="email"
      onChange={[Function]}
      placeholder="Email"
      type="text"
      value=""
    />
    <input
      className="default"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <input
      className="default"
      id="firstName"
      name="firstName"
      onChange={[Function]}
      placeholder="First Name"
      type="text"
      value=""
    />
    <input
      className="default"
      id="lastName"
      name="lastName"
      onChange={[Function]}
      placeholder="Surname"
      type="text"
      value=""
    />
    <input
      className="default"
      id="company"
      name="company"
      onChange={[Function]}
      placeholder="Company"
      type="text"
      value=""
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="signUpButton"
      onClick={[Function]}
      type="submit"
      value="Sign up"
    />
    <div
      className="spacer"
    />
    <p
      className="sign-up-in-text"
      onClick={[Function]}
    >
      Already have an account?  Click here to sign in
    </p>
  </form>
</Fragment>
`;
